configurando variables de entorno

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-database.host=127.0.0.1
-database.port=5432
-database.password=holamundo
-database.schema=base-local
+database.host=${env.database.host}
+database.port=${env.database.port}
+database.password=${env.database.password}
+database.schema=${env.database.schema}
 
