--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 database.host=127.0.0.1
 database.port=5432
 database.password=holamundo
-database.schema=base-local
+database.schemas=base-local
 database.user=miUsuario
